--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>Template by <a href="https://getbootstrap.com/">Bootstrap</a> + <a href="https://twitter.com/mdo">@mdo</a>.</p>
     </div>
   </footer>
 </div>
